# clawbox

./: .gitignore  .openclaw-source-path.demo  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  release-notes-template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: dependency-policy.md  openclaw-compatibility.md  releasing.md
docs/releases/: v2026.3.17-1.md  v2026.3.17.md
internal/: compatibility.json  index.ts  logger.ts
internal/channels/: auth-session.ts  catalog.ts  facade.ts  fallback-schema.ts  mapper.ts  types.ts
internal/config/: index.ts
internal/onboard/: README.md  constants.ts  gateway.ts  index.ts  node-runtime.ts  onboard-state.ts  openclaw-bin.ts  platform.ts  routes.ts  utils.ts  windows-env.ts
internal/providers/: index.ts  openclaw-completions.ts  openclaw-rpc.ts
scripts/: build-backend.mjs  collect-release-assets.mjs  download-node.mjs  mock-gateway.mjs  release-version.mjs  run-npm-audit.mjs  scan-repo-hygiene.mjs  sign-win-installer.mjs  sign-win.mjs  sync-version.mjs  write-checksums.mjs
src/: App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  tauri.bundle-only.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test/: openclaw-stream.ts  repo-hygiene.test.ts  smoke-backend.mjs
(+123 files in other folders)
